[package]
name = "tech_talk_downloader"
version = "1.0.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0", features = ["derive"] }
anyhow = { version = "1.0" }
indicatif = "0.16.2"
log = "0.4.17"
env_logger = "0.9.0"
clap-verbosity-flag = "1.0.0"
reqwest = { version = "0.11", features = ["stream"] }
tokio = { version = "1", features = ["full"] }
scraper = "0.13.0"
subparse = "0.7.0"
futures-util = "0.3.14"
